--- a/index.css
+++ b/index.css
@@ -349,7 +349,7 @@ canvas {
     z-index: 99;
     background-color: rgb(34, 34, 34);
     color: white;
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
     letter-spacing: 1em;
